fix layout shift

--- a/style/fields/input.css
+++ b/style/fields/input.css
@@ -4,7 +4,8 @@ select {
   appearance: none;
   width: 100%;
   border-radius: 0.5rem;
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
   padding: 0.75rem 1rem;
   font: var(--text);
 }
@@ -21,7 +22,7 @@ input:focus,
 textarea:focus,
 select:focus input[type="data"]:focus-within {
   outline: 0.25rem solid var(--surface-secondary);
-  border: 0.125rem solid var(--strock-highlight);
+  border-color: var(--strock-highlight);
   outline-offset: 1px;
 }
 
